# ueb06finish

./: CMakeLists.txt  Untitled Diagram.drawio
header/: database.h  datastructure.h  datetime.h  list.h  menu.h  sort.h  teams.h  tools.h
src/: database.c  datetime.c  list.c  main.c  menu.c  sort.c  teams.c  tools.c
src/xml/: save_teams.xml  team.xml  teams.xml
